--- a/css/styles.css
+++ b/css/styles.css
@@ -816,7 +816,21 @@ body {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form .form-input::placeholder {
+.form .form-textarea {
+  resize: none;
+  padding: 12px 16px;
+  height: 120px;
+  background-color: transparent;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  cursor: pointer;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form .form-textarea::placeholder {
   font-size: 14px;
   line-height: 1.16;
   letter-spacing: 0.01em;
@@ -824,14 +838,10 @@ body {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.form textarea.form-input {
-  resize: none;
-  padding-left: 16px;
-  height: 120px;
-}
-
 .form .form-input:hover,
-.form .form-input:focus {
+.form .form-input:focus,
+.form .form-textarea:hover,
+.form .form-textarea:focus {
   border-color: var(--accent-color);
   outline: 0px;
 }
