--- a/css/styles.css
+++ b/css/styles.css
@@ -805,7 +805,7 @@ body {
   color: var(--secondary-text-color-dark);
 }
 
-.form .form-input:not([type='checkbox']) {
+.form .form-input {
   background-color: transparent;
   padding: 12px 12px 12px 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
